mosquitto-with-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:1.6.2
        ports:
        - containerPort: 1883
        volumeMounts:
          - name: mosquitto-config
            mountPath: Path in the file system inside the container
          - name: mosquitto-secret
            mountPath: Path in the file system inside the container
            readOnly: true
      volumes: 
       - name: mosquitto-config
         configMap:
          name: mosquitto-config-file
       - name: mosquitto-secret
         secret:
          secretName: mosquitto-secret-file
