example-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-externalservice
spec:
  selector:
    app: myapp
  type: LoadBalancer 
  ports:
  - protocol: tcp
    port:  8080
    targetPort:  8080
    nodePort: 30000
